Copy Public, Private, and lib folders to output

--- a/PSPaperCut/PSPaperCut.csproj
+++ b/PSPaperCut/PSPaperCut.csproj
@@ -36,6 +36,30 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Functions.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Public\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Private\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="lib\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="IncludeDllHelp" BeforeTargets="PrepareForPublish">
     <ItemGroup>
       <DocFile Include="$(OutputPath)\*.dll-Help.xml" />
