--- a/PSPaperCut/Properties/launchSettings.json
+++ b/PSPaperCut/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "PSPaperCut": {
       "commandName": "Executable",
       "executablePath": "pwsh",
-      "commandLineArgs": "-noprofile -noexit -command & {ipmo .\\PSPaperCut.psd1; $s = Connect-PaperCutServer -Server 'localhost' -Port 9191 -AuthToken 'test'; $s.UserExists('test')}"
+      "commandLineArgs": "-noprofile -noexit -command & {ipmo .\\PaperCut.psd1; $s = Connect-PaperCutServer -Server 'localhost' -Port 9191 -AuthToken 'test'; $s.UserExists('test')}"
     }
   }
 }
